HighContrast: Some formatting fixes

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -547,7 +547,7 @@ $_dot_color: $selected_bg_color;
   border-radius: 0;
 }
 
-%linked_vertical{
+%linked_vertical {
   @extend %linked_vertical_middle;
   &:first-child {
     border-style: solid;
@@ -722,7 +722,8 @@ GtkColorButton.button { padding: 4px; } // Uniform padding on the
  *     border-radius: 0;
  *     box-shadow: none;
  *   }
- * } */
+ * }
+ */
 }
 
 /**************
@@ -777,9 +778,9 @@ GtkComboBox {
 }
 
 .linked > GtkComboBox > .button {
-  // the combo is a composite widget so the way we do button linkind doesn't
-  // work, special case needed. See
-  // https://bugzilla.gnome.org/show_bug.cgi?id=733979
+  // The combo is a composite widget so the way we do
+  // button linking doesn't work, special case needed.
+  // See https://bugzilla.gnome.org/show_bug.cgi?id=733979
   &:dir(ltr) { @extend %linked_middle; } // specificity bump
   &:dir(rtl) { @extend %linked_middle:dir(rtl); }
 }
